[metadata]
name = hashpipe_keyvalues
version = 0.1.5
description = Python Library of supporting code for hashpipe_keyvalues, in particular accessing, setting distributing them via the redis-gateway for an instance of hashpipe.
long_description = file: README.md, LICENSE
keywords = hashpipe
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
zip_safe = False
install_requires =
package_dir=
    =src
packages = find:

[options.packages.find]
where = 
    src